Create user import service for creating users from CSV file
Add specs for Users::CSVImportService

--- a/app/views/home_pages/index.html.erb
+++ b/app/views/home_pages/index.html.erb
@@ -8,3 +8,5 @@
     <%= form.submit "Upload", class: "bg-blue-950 text-white px-3 py-1 rounded-md cursor-pointer" %>
   <% end %>
 </div>
+
+<div id="results"></div>
