--- a/app/views/home_pages/create.turbo_stream.erb
+++ b/app/views/home_pages/create.turbo_stream.erb
@@ -1,20 +1,26 @@
 <%= turbo_stream.update "results" do %>
-  <div id="results">
-    <table>
-      <tr>
-        <th>Name</th>
-        <th>Password</th>
-        <th>Result</th>
-        <th>Message</th>
-      </tr>
-      <% @result.each do |result|%>
+  <div id="results" class="p-4">
+    <table class="min-w-full bg-white shadow-md rounded-lg overflow-hidden">
+      <thead class="bg-gray-100 border-b">
         <tr>
-          <td><%= result.row_data[:name] %></td>
-          <td><%= result.row_data[:password] %></td>
-          <td><%= result.status %></td>
-          <td><%= result.message %></td>
+          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
+          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Password</th>
+          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Result</th>
+          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Message</th>
         </tr>
-      <% end %>
+      </thead>
+      <tbody class="divide-y divide-gray-200">
+        <% @result.each do |result| %>
+          <tr class="hover:bg-gray-50">
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"><%= result.row_data[:name] %></td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900"><%= result.row_data[:password] %></td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm">
+              <%= status_badge(result.status) %>
+            </td>
+            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500"><%= result.message %></td>
+          </tr>
+        <% end %>
+      </tbody>
     </table>
   </div>
 <% end %>
